--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                 <nav class="collapse navbar-collapse navbar-right" role="navigation">
                     <ul id="nav" class="nav navbar-nav">
                         <li><a href="#body">Home</a></li>
-                        <li><a href="#service">Service</a></li>
-                        <li><a href="#portfolio">portfolio</a></li>
-                        <li><a href="#testimonials">Testimonial</a></li>
+                        <li><a href="#service">Work</a></li>
+                        <li><a href="#portfolio">Likes</a></li>
+                        <li><a href="#testimonials">Dislikes</a></li>
 
                         <li><a href="#contact">Contact</a></li>
                     </ul>
