--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
                         <li><a href="#service">Work</a></li>
                         <li><a href="#portfolio">Likes</a></li>
                         <li><a href="#testimonials">Dislikes</a></li>
-
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#contact">Information</a></li>
                     </ul>
                 </nav>
 				<!-- /main nav -->
@@ -110,8 +109,8 @@
 
 						<div class="slide-caption">
                             <div class="caption-content">
-                                <h2 class="animated fadeInDown">Tech Cloud</h2>
-                                <span class="animated fadeInDown">Clean and Professional one page Template</span>
+                                <h2 class="animated fadeInDown">Tech Cloud ltd</h2>
+                                <span class="animated fadeInDown">Professional Software Firm</span>
                                 <a href="#" class="btn btn-blue btn-effect">Join US</a>
                             </div>
                         </div>
@@ -124,7 +123,7 @@
 						<div class="slide-caption">
                             <div class="caption-content">
                                 <h2>BLUE Onepage HTML5 Template</h2>
-                                <span>Clean and Professional one page Template</span>
+                                <span>Professional one page Html Template</span>
                                 <a href="#" class="btn btn-blue btn-effect">Join US</a>
                             </div>
                         </div>
@@ -136,8 +135,8 @@
 						<div class="bg-img bg-img-3"></div>
 						<div class="slide-caption">
                             <div class="caption-content">
-                                <h2>BLUE Onepage HTML5 Template</h2>
-                                <span>Clean and Professional one page Template</span>
+                                <h2>Html5 Template</h2>
+                                <span>Professional Html Template</span>
                                 <a href="#" class="btn btn-blue btn-effect">Join US</a>
                             </div>
                         </div>
@@ -182,14 +181,12 @@
 					<div class="row">
 						<div class="col-md-4 wow animated fadeInLeft">
 							<div class="recent-works">
-								<h3>Recent Works</h3>
+								<h3>My Recent Works</h3>
 								<div id="works">
 									<div class="work-item">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> <br> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-									</div>
+										<p>I just finished my B.S.c from AIUB. When i was at AIUB i did many indivitual projects and some group projects that include my class related work and some of my own additional work.  </div>
 									<div class="work-item">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br><br> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-									</div>
+										<p>I did some projects in java,C#,PHP,C++ and Android Language.</div>
 									<div class="work-item">
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br><br> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
 									</div>
