--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                 <nav class="collapse navbar-collapse navbar-right" role="navigation">
                     <ul id="nav" class="nav navbar-nav">
                         <li><a href="#body">Home</a></li>
-                        <li><a href="#service">Service</a></li>
-                        <li><a href="#portfolio">portfolio</a></li>
+                        <li><a href="#service">Works</a></li>
+                        <li><a href="#portfolio">Likes</a></li>
                         <li><a href="#testimonials">Testimonial</a></li>
                         <li><a href="#price">price</a></li>
                         <li><a href="#contact">Contact</a></li>
