--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@ Fixed Navigation
 				<li><a href="#service">Works</a></li>
 				<li><a href="#portfolio">Likes</a></li>
 				<li><a href="#testimonials">Testimonial</a></li>
-				<li><a href="#price">price</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</nav>
@@ -200,7 +199,7 @@ End Fixed Navigation
 					<div class="welcome-block">
 						<h3>Welcome To Our Site</h3>
 						<div class="message-body">
-							<img src="img/member-1.jpg" class="pull-left" alt="member">
+							<img src="img/member-3.jpg" class="pull-left" alt="member">
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
 						</div>
 						<a href="#" class="btn btn-border btn-effect pull-right">Read More</a>
@@ -370,17 +369,17 @@ End Fixed Navigation
 
 					<div id="testimonial" class=" wow animated fadeInUp">
 						<div class="testimonial-item text-center">
-							<img src="img/member-1.jpg" alt="Our Clients">
+							<img src="img/member-2.jpg" alt="Our Clients">
 							<div class="clearfix">
-								<span>Katty Flower</span>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+								<span>Betty Flower</span>
+								<p>nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 							</div>
 						</div>
 						<div class="testimonial-item text-center">
-							<img src="img/member-1.jpg" alt="Our Clients">
+							<img src="img/member-4.jpg" alt="Our Clients">
 							<div class="clearfix">
-								<span>Katty Flower</span>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+								<span>Satty Flower</span>
+								<p>tempor incididunt ut labore et dolore magna aliqua Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 							</div>
 						</div>
 						<div class="testimonial-item text-center">
@@ -398,74 +397,6 @@ End Fixed Navigation
 	</section>
 	<!-- end Testimonial section -->
 
-	<!-- Price section -->
-	<section id="price">
-		<div class="container">
-			<div class="row">
-
-				<div class="sec-title text-center wow animated fadeInDown">
-					<h2>Price</h2>
-					<p>Our price for your company</p>
-				</div>
-
-				<div class="col-md-4 wow animated fadeInUp">
-					<div class="price-table text-center">
-						<span>Silver</span>
-						<div class="value">
-							<span>$</span>
-							<span>24,35</span><br>
-							<span>month</span>
-						</div>
-						<ul>
-							<li>No Bonus Points</li>
-							<li>No Bonus Points</li>
-							<li>No Bonus Points</li>
-							<li>No Bonus Points</li>
-							<li><a href="#">sign up</a></li>
-						</ul>
-					</div>
-				</div>
-
-				<div class="col-md-4 wow animated fadeInUp" data-wow-delay="0.4s">
-					<div class="price-table featured text-center">
-						<span>Gold</span>
-						<div class="value">
-							<span>$</span>
-							<span>50,00</span><br>
-							<span>month</span>
-						</div>
-						<ul>
-							<li>Free Trial</li>
-							<li>Free Trial</li>
-							<li>Free Trial</li>
-							<li>Free Trial</li>
-							<li><a href="#">sign up</a></li>
-						</ul>
-					</div>
-				</div>
-
-				<div class="col-md-4 wow animated fadeInUp" data-wow-delay="0.8s">
-					<div class="price-table text-center">
-						<span>Diamond</span>
-						<div class="value">
-							<span>$</span>
-							<span>123,12</span><br>
-							<span>month</span>
-						</div>
-						<ul>
-							<li>All Bonus Points</li>
-							<li>All Bonus Points</li>
-							<li>All Bonus Points</li>
-							<li>All Bonus Points</li>
-							<li><a href="#">sign up</a></li>
-						</ul>
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</section>
-	<!-- end Price section -->
 
 	<!-- Social section -->
 	<section id="social" class="parallax">
@@ -474,8 +405,8 @@ End Fixed Navigation
 				<div class="row">
 
 					<div class="sec-title text-center white wow animated fadeInDown">
-						<h2>FOLLOW US</h2>
-						<p>Beautifully simple follow buttons to help you get followers on</p>
+						<h2>You can FOLLOW US on</h2>
+						<p>Please press follow buttons to help you get followers on</p>
 					</div>
 
 					<ul class="social-button">
@@ -491,13 +422,13 @@ End Fixed Navigation
 	<!-- end Social section -->
 
 	<!-- Contact section -->
-	<section id="contact" >
+	<section id="contct " >
 		<div class="container">
 			<div class="row">
 
 				<div class="sec-title text-center wow animated fadeInDown">
 					<h2>Contact</h2>
-					<p>Leave a Message</p>
+					<p>Please Leave us a Message</p>
 				</div>
 
 
@@ -521,7 +452,7 @@ End Fixed Navigation
 
 				<div class="col-md-5 wow animated fadeInRight">
 					<address class="contact-details">
-						<h3>Contact Us</h3>
+						<h3>Contact Us on our Address</h3>
 						<p><i class="fa fa-pencil"></i>Phoenix Inc.<span>PO Box 345678</span> <span>Little Lonsdale St, Melbourne </span><span>Australia</span></p><br>
 						<p><i class="fa fa-phone"></i>Phone: (415) 124-5678 </p>
 						<p><i class="fa fa-envelope"></i>website@yourname.com</p>
