recent work and welcome

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ Fixed Navigation
 				<li><a href="#body">Home</a></li>
 				<li><a href="#service">Works</a></li>
 				<li><a href="#portfolio">Likes</a></li>
-				<li><a href="#testimonials">Testimonial</a></li>
-				<li><a href="#contact">Contact</a></li>
+				<li><a href="#testimonials">Dislikes</a></li>
+				<li><a href="#contact">Information</a></li>
 			</ul>
 		</nav>
 		<!-- /main nav -->
@@ -110,7 +110,7 @@ End Fixed Navigation
 					<div class="slide-caption">
 						<div class="caption-content">
 							<h2 class="animated fadeInDown">Tech Cloud</h2>
-							<span class="animated fadeInDown">Clean and Professional one page Template</span>
+							<span class="animated fadeInDown">Professional Software firm</span>
 							<a href="#" class="btn btn-blue btn-effect">Join US</a>
 						</div>
 					</div>
@@ -122,8 +122,8 @@ End Fixed Navigation
 					<div class="bg-img bg-img-2"></div>
 					<div class="slide-caption">
 						<div class="caption-content">
-							<h2>BLUE Onepage HTML5 Template</h2>
-							<span>Clean and Professional one page Template</span>
+							<h2>Tech Cloud ltd.</h2>
+							<span>Software consultancy firm</span>
 							<a href="#" class="btn btn-blue btn-effect">Join US</a>
 						</div>
 					</div>
@@ -136,7 +136,7 @@ End Fixed Navigation
 					<div class="slide-caption">
 						<div class="caption-content">
 							<h2>BLUE Onepage HTML5 Template</h2>
-							<span>Clean and Professional one page Template</span>
+							<span>Clean and Professional one page HTML5 Template</span>
 							<a href="#" class="btn btn-blue btn-effect">Join US</a>
 						</div>
 					</div>
@@ -184,24 +184,20 @@ End Fixed Navigation
 						<h3>Recent Works</h3>
 						<div id="works">
 							<div class="work-item">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> <br> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-							</div>
+								<p>I just finished my undergraduate from AIUB. While Studing in AIUB i did some class releted project and some of my own projects in differrent language. </div>
 							<div class="work-item">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br><br> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-							</div>
+								<p>I did some projects on php,android,c#,java and c++. They were small class related projects.</div>
 							<div class="work-item">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br><br> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-							</div>
+								<p>projests like School Management System,Online BLood BANK,Online Shopping center,some android apps,Online Bank management system etc. </div>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-7 col-md-offset-1 wow animated fadeInRight">
 					<div class="welcome-block">
-						<h3>Welcome To Our Site</h3>
+						<h3>Welcome To Our WebSite</h3>
 						<div class="message-body">
 							<img src="img/member-3.jpg" class="pull-left" alt="member">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-						</div>
+							<p>Welcome to our new website.This is an welcome message</div>
 						<a href="#" class="btn btn-border btn-effect pull-right">Read More</a>
 					</div>
 				</div>
